<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.acme.fit_app.MainActivity">


    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="always" >

        <menu>
            <item
                android:id="@+id/action_change_user"
                android:checkable="false"
                android:orderInCategory="100"
                android:icon="@drawable/ic_loop_black_24dp"
                android:visible="true"
                android:title="@string/change_user"
                app:showAsAction="always|withText"/>

            <item
                android:id="@+id/action_change_data"
                android:checkable="false"
                android:orderInCategory="100"
                android:icon="@drawable/ic_change_data"
                android:title="@string/change_data"
                android:visible="true"
                app:showAsAction="always|withText"/>

            <item
                android:id="@+id/action_delete_data"
                android:checkable="false"
                android:orderInCategory="100"
                android:icon="@drawable/ic_delete"
                android:title="@string/delete_data"
                android:visible="true"
                app:showAsAction="always|withText"/>

            <item
                android:id="@+id/action_delete_user"
                android:checkable="false"
                android:orderInCategory="100"
                android:icon="@drawable/ic_delete_user"
                android:title="@string/delete_user"
                app:showAsAction="always|withText"/>
        </menu>
    </item>
</menu>
