<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovementDetailsFragment">

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:paddingTop="12dp"
        android:text="@string/registro"
        android:fontFamily="@font/mandali"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/register_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/register"
        android:layout_gravity="bottom"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/register"
        android:fontFamily="@font/mandali"
        android:singleLine="true"
        android:text="@string/valor"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register"
        android:paddingTop="8dp"
        android:layout_marginStart="30dp"
        android:text="@string/tenista"
        android:fontFamily="@font/mandali"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/by_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/by"
        android:layout_gravity="bottom"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/by"
        android:fontFamily="@font/mandali"
        android:singleLine="true"
        android:text="@string/valor"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/by"
        android:paddingTop="8dp"
        android:layout_marginStart="30dp"
        android:text="@string/dispositivo"
        android:fontFamily="@font/mandali"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/device_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/device"
        android:layout_gravity="bottom"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/device"
        android:fontFamily="@font/mandali"
        android:singleLine="true"
        android:text="@string/valor"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/brazo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/device"
        android:paddingTop="8dp"
        android:layout_marginStart="30dp"
        android:text="@string/user_brazo2"
        android:fontFamily="@font/mandali"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/brazo_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/brazo"
        android:layout_gravity="bottom"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/brazo"
        android:fontFamily="@font/mandali"
        android:singleLine="true"
        android:text="@string/valor"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />


    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/brazo"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp">

    </com.github.mikephil.charting.charts.LineChart>


</RelativeLayout>