<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".Usuarios.CreateNewUserFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="18dp"
        android:text="@string/new_user"
        android:fontFamily="@font/mandali"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_user" />

        <EditText
            android:id="@+id/user_name_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/user_name"
            android:fontFamily="@font/mandali"
            android:textSize="18sp"
            android:inputType="text"
            android:layout_marginEnd="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/age_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_age" />

        <EditText
            android:id="@+id/user_age_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/user_age"
            android:fontFamily="@font/mandali"
            android:textSize="18sp"
            android:inputType="number"
            android:layout_marginEnd="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/brazo_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="18dp"
            android:src="@drawable/ic_brazo" />

        <EditText
            android:id="@+id/user_brazo_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@android:drawable/editbox_background"
            android:fontFamily="@font/mandali"
            android:hint="@string/user_brazo"
            android:inputType="text"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>